Fixes log display when ad is present on mobile. Makes danger buttons red again.

--- a/botbot/less/management.less
+++ b/botbot/less/management.less
@@ -328,14 +328,6 @@ body.welcome-page {
 
 }
 
-.btn {
-  background-color: #337ab7;
-  border-color: #2e6da4;
-  background-image: none;
-  border: none;
-  box-shadow: none;
-}
-
 #pricing {
   text-align: center;
 
