--- a/botbot/less/responsive.less
+++ b/botbot/less/responsive.less
@@ -121,6 +121,10 @@ and (max-width: 768px) {
 		article { margin-right: 0; position: relative; z-index: 0; }
 	}
 
+	.display_bbsponsor #Log-Container article {
+		margin-right: 0;
+	}
+
 	#Log-Nav:target { display: block; }
 	#Site-Footer {
 		margin-right: 0;
